--- a/.github/workflows/generate-file-list.yml
+++ b/.github/workflows/generate-file-list.yml
@@ -54,10 +54,27 @@ jobs:
                               html_content += '<ul>\n'
                               for subdir in sorted(papers_path.iterdir()):
                                   if subdir.is_dir():
-                                      main_pdf = subdir / 'main.pdf'
-                                      if main_pdf.exists():
-                                          relative_path = main_pdf.relative_to(Path('.'))
-                                          html_content += f'    <li><a href="{relative_path}">{subdir.name}</a></li>\n'
+                                      ja_pdf = subdir / 'ja.pdf'
+                                      en_pdf = subdir / 'en.pdf'
+                                      
+                                      html_content += f'    <li>- {subdir.name}<br>\n'
+                                      html_content += '        '
+                                      
+                                      if ja_pdf.exists():
+                                          relative_path = ja_pdf.relative_to(Path('.'))
+                                          html_content += f'<a href="{relative_path}">日本語</a>'
+                                      else:
+                                          html_content += '日本語'
+                                      
+                                      html_content += ' / '
+                                      
+                                      if en_pdf.exists():
+                                          relative_path = en_pdf.relative_to(Path('.'))
+                                          html_content += f'<a href="{relative_path}">English</a>'
+                                      else:
+                                          html_content += 'English'
+                                      
+                                      html_content += '</li>\n'
                               html_content += '</ul>\n'
                           else:
                               html_content += '<p>{blank}</p>\n'
@@ -69,10 +86,27 @@ jobs:
                               html_content += '<ul>\n'
                               for subdir in sorted(slides_path.iterdir()):
                                   if subdir.is_dir():
-                                      main_pdf = subdir / 'main.pdf'
-                                      if main_pdf.exists():
-                                          relative_path = main_pdf.relative_to(Path('.'))
-                                          html_content += f'    <li><a href="{relative_path}">{subdir.name}</a></li>\n'
+                                      ja_pdf = subdir / 'ja.pdf'
+                                      en_pdf = subdir / 'en.pdf'
+                                      
+                                      html_content += f'    <li>- {subdir.name}<br>\n'
+                                      html_content += '        '
+                                      
+                                      if ja_pdf.exists():
+                                          relative_path = ja_pdf.relative_to(Path('.'))
+                                          html_content += f'<a href="{relative_path}">日本語</a>'
+                                      else:
+                                          html_content += '日本語'
+                                      
+                                      html_content += ' / '
+                                      
+                                      if en_pdf.exists():
+                                          relative_path = en_pdf.relative_to(Path('.'))
+                                          html_content += f'<a href="{relative_path}">English</a>'
+                                      else:
+                                          html_content += 'English'
+                                      
+                                      html_content += '</li>\n'
                               html_content += '</ul>\n'
                           else:
                               html_content += '<p>{blank}</p>\n'
